Añadida propiedades varias relacionales en entidades como booking, room, user, roles, y nuevas entidades como payment, addon, reviews con enum como MaintenaceStatus y BookingStatus